--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <meta name="viewport" content="widht=900px">
 <title>introduce myself - :: ホーム</title>
 <link rel="icon" href="images/favicon.png">
-<link rel="stylesheet" href="css/reset.css">
-<link rel="stylesheet" href="css/common.css">
-<link rel="stylesheet" href="css/top.css">
+<link rel="stylesheet" href="reset.css">
+<link rel="stylesheet" href="common.css">
+<link rel="stylesheet" href="top.css">
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/script.js"></script>
 </head>
